VHM currently rasing over 1/4 of the landscape

--- a/Plugins/UnrealSnow/UnrealSnow.uplugin
+++ b/Plugins/UnrealSnow/UnrealSnow.uplugin
@@ -18,6 +18,9 @@
       "Type": "Runtime",
       "LoadingPhase": "Default"
     }
+  ],
+  "Plugins": [
+    { "Name": "VirtualHeightfieldMesh", "Enabled": true }
   ]
 }
 
